--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,28 +6,12 @@
 <link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">    
 <title>{{ page.title }} | {{site.name}}</title>
 {% seo %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Rubik:400,400i,500,500i,700,700i" rel="stylesheet">
-<link href="{{ site.baseurl }}/assets/css/theme.css" rel="stylesheet">
-<link href="{{ site.baseurl }}/assets/css/custom.css" rel="stylesheet">
-    
-{{site.sharethis}}
-    
-{% if jekyll.environment == 'production' %}    
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', '{{site.google_analytics}}', 'auto');
-  ga('send', 'pageview');
-</script>
-{% endif %}  
-    
-
-    
+<link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet">
+<link href="/assets/css/theme.css" rel="stylesheet">
+<link href="/assets/css/custom.css" rel="stylesheet">
 </head>
     
 
@@ -45,8 +29,8 @@
     <div class="container">
 
         <!-- Begin Logo -->
-        <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+        <a class="navbar-brand" href="/">
+            Cerebro
         </a>
         <!-- End Logo -->
 
@@ -56,35 +40,29 @@
             <!-- Begin Menu -->
             <ul class="navbar-nav ml-auto">
                 
-                <li class="nav-item">                
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
-                </li>
-
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Post</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/is-intelligence-enough.html">Left Sidebar</a>
-                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/red-riding.html">Right Sidebar</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Projects
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Stay Tuned!</a>
+                      <!-- <a class="dropdown-item" href="#">Another action</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Something else here</a> -->
                     </div>
                 </li>
-                
+
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                    <a class="nav-link" href="/archive">Blog and Talks</a>
                 </li> 
                 
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/contact">Contact</a>
+                    <a class="nav-link" href="/about">About</a>
                 </li> 
                 
                  <li class="nav-item">                
-                    <a target="_blank" class="nav-link" href="https://github.com/wowthemesnet/affiliates-jekyll-theme">Github</a>
+                    <a target="_blank" class="nav-link" href="https://github.com/cerebroai">Github</a>
                 </li> 
-                
-                
-                <li class="nav-item">                
-                    <a class="nav-link highlight" href="https://github.com/wowthemesnet/affiliates-jekyll-theme/archive/master.zip">Download Theme</a>
-                </li> 
-                
             </ul>
             <!-- End Menu -->
             
@@ -128,17 +106,14 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>This is your final call to action area. Shine like a star, make them want you, tell 'em to push that button!</h3>
-                    <p>We offer a <span>30 Day Money Back Guarantee</span>, so joining is <span class="risk-free">Risk-Free!</span></p>
-                    <a class="btn btn-primary btn-lg" href="#">Join us yesterday</a>
+                    <h4>Help us in making research more interesting and viable for every student from every college!</h4><br>
+                    <a class="btn btn-primary btn-lg" href="mailto:coding@iitgn.ac.in">Join us</a>
                 </div>
                 <div class="col-md-4 text-right footersocial">
                     <h5>Connect with Us</h5>
-                    <i class="fa fa-facebook"></i>
-                    <i class="fa fa-twitter"></i>
-                        <i class="fa fa-google"></i>
-                     <i class="fa fa-pinterest"></i>
-                     <i class="fa fa-github"></i>
+                    <a href="https://www.facebook.com/Cerebro-106166857576883/?modal=admin_todo_tour"><i class="fa fa-facebook"></i></a>
+                    <a href="https://twitter.com/Cerebro_AI"><i class="fa fa-twitter"></i></a>
+                    <a href="https://github.com/cerebroai"><i class="fa fa-github"></i></a>
                 </div>
             </div>
         </div>
@@ -151,56 +126,40 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                 <div class="footer-widget">
                 <a href="{{site.baseurl}}/contact">
-                <img src="{{ site.baseurl }}/assets/images/logo-footer.png">
+                <h5 style="color: #60b0f4; font-size: 60px; margin-top:1em">Cerebro</h5>
                 </a>
                 </div>
                 </div>
 
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                 <div class="footer-widget">
                 <h5 class="title">Resources</h5>
                 <ul>
-                <li><a target="_blank" href="https://m.do.co/c/84c9b45d0c47">Digital Ocean</a></li>
-                <li><a target="blank" href="https://www.cloudways.com/en/pricing.php?id=153986&amp;a_bid=005da123">Cloudways</a></li>
-                <li><a target="blank" href="http://shareasale.com/r.cfm?b=875645&amp;u=1087935&amp;m=41388&amp;urllink=&amp;afftrack=">Page Speed Test</a></li>
-                <li><a target="blank" href="https://www.wowthemes.net/affiliate-area/?utm_source=fromjekyllsidebar&utm_campaign=sidebar">Partner with Us</a></li>
-                <li><a target="blank" href="https://www.wowthemes.net/category/jekyll-themes/">Our Jekyll Themes</a></li>
+                <li><a target="_blank" href="https://github.com/cerebroai">Open Source</a></li>
+                <li><a target="blank" href="https:/iitgn.ac.in">IIT Gandhinagar</a></li>
+                <li><a target="blank" href="http://coding-iitgn.github.io">Metis, IITGN</a></li>
                 </ul>
                 </div>
                 </div>
 
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                 <div class="footer-widget">
-                <h5 class="title">Author</h5>
+                <h5 class="title">Adress</h5>
                 <ul>
-                <li><a href="https://www.wowthemes.net/premium-themes-templates/">About Us</a></li>
-                <li><a target="_blank" href="https://www.wowthemes.net/affiliate-area/">Affiliates</a></li>
-                <li><a href="https://www.wowthemes.net/terms-and-conditions/">License</a></li>
-                <li><a href="https://www.wowthemes.net/blog/">Blog</a></li>
-                <li><a href="https://www.wowthemes.net/support/">Contact</a></li>
+                    Indian Institute of Technology<br>
+                    Palaj, Gujarat 382355<br>
+                    India
                 </ul>
-                </div>
-                </div>
-
-                <div class="col-sm-3">
-                <div class="footer-widget textwidget">
-                    <h5 class="title">Download</h5>
-                    <p>Download "Affiliates" theme and use it for your next Jekyll project. If you have a question, a bug report, or if you simply want to say hi, <a href="https://www.wowthemes.net/support/">contact us here</a>.</p> 
-                    <a href="https://github.com/wowthemesnet/affiliates-jekyll-theme/archive/master.zip">Download Theme</a>                    
                 </div>
                 </div>
             </div>
 
             <div class="copyright">
                 <p class="pull-left">
-                Copyright © {{ site.time | date: "%Y" }} {{ site.name }}.
-                </p>
-                <p class="pull-right">
-                <!-- Please, leave credit to author unless you own a commercial license: https://www.wowthemes.net/freebies-license/ --> 
-                <a target="_blank" href="https://www.wowthemes.net/free-jekyll-template-affiliates/">"Affiliates Theme"</a> - Design & Code by WowThemes.net
+                Copyright © {{ site.time | date: "%Y" }} Cerebro.
                 </p>
                 <div class="clearfix"></div>
             </div>
