--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -5,7 +5,7 @@ Version:1.0.2
 License: https://www.wowthemes.net/freebies-license/
 */
 body {
-    font-family: "Rubik", -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
+    font-family: 'Noto Sans', Arial, sans-serif !important;
     overflow-x: hidden;
 }
 .mainheading {
@@ -326,7 +326,7 @@ span.post-name a,span.post-read-more a:hover {
 	margin-bottom:1rem;
 }
 .intro {
-    background-image:url(../images/head.jpg);
+    background-image:url(../images/AI-banner.jpg);
     background-size:cover;
     padding: 9rem 0;
     margin-top:-87px;
@@ -334,34 +334,21 @@ span.post-name a,span.post-read-more a:hover {
     z-index: 1;
     position: relative;
 }
-.intro .btn {
-    background: #fff100;
-    border: 0;
-    color: #333;
-    border-radius: 3px;
-    font-weight: 500;
-    padding: 15px 40px;
-    box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 1px;
-}
-.intro h1 {
-    font-weight:700;
-}
 .intro h2 {
-    margin-top: 2rem;
+    margin-top: 1rem;
     margin-bottom: 2rem;
-    color: #888;
+    color: white;
     line-height: 1.6;
+    font-size: 30px;
 }
 .wrapintro {
-    background: #fff;
+    background: transparent;
     width: 700px;
     padding: 3rem;
     max-width: 90%;
     margin: 0px auto;
-    text-align: center;
+    text-align: left;
+    margin-left: 10em;
 }
 .footer {
 	border-top:1px solid rgba(0,0,0,.05)!important;
@@ -386,8 +373,8 @@ span.post-name a,span.post-read-more a:hover {
     margin-top: 10px;
 }
 .beforefooter {
-    background: #fff100;
-    color: #111;
+    background: #0e5fc4;
+    color: white;
     padding: 50px 0;
     max-width: 100%;
     margin: 0px auto;
