--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <div class="container">
 
         <!-- Begin Logo -->
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/cerebroai">
             Cerebro
         </a>
         <!-- End Logo -->
@@ -53,11 +53,11 @@
                 </li>
 
                 <li class="nav-item">                
-                    <a class="nav-link" href="/archive">Blog and Talks</a>
+                    <a class="nav-link" href="/cerebroai/archive">Blog and Talks</a>
                 </li> 
                 
                 <li class="nav-item">                
-                    <a class="nav-link" href="/about">About</a>
+                    <a class="nav-link" href="/cerebroai/about">About</a>
                 </li> 
                 
                  <li class="nav-item">                
